updated index.html file
in index.html file added second heading and paragraph

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     this is second paragraph 
     this file is created by using html 
 </p>
-</body>
+<h2>this is second heading</h2>
+        <p>
+            this above <strong> Heading and this paragraph </strong> <br>are edited in git hub repository to learn editing in remote repository.
+        </p>
+    </body>
 </html>
